--- a/app/src/main/res/layout/fragment_home_mine_settint_about.xml
+++ b/app/src/main/res/layout/fragment_home_mine_settint_about.xml
@@ -42,7 +42,7 @@
             android:id="@+id/iv_logon"
             android:layout_marginTop="56dp"
             android:layout_centerHorizontal="true"
-            android:src="@drawable/ic_launcher"
+            android:src="@drawable/img_logo"
             android:layout_width="60dp"
             android:layout_height="60dp" />
 
