--- a/app/src/main/res/layout/fragment_home_mine_personal_information.xml
+++ b/app/src/main/res/layout/fragment_home_mine_personal_information.xml
@@ -217,6 +217,7 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/rl_change_password"
         android:layout_width="match_parent"
         android:layout_height="54dp">
 
