--- a/app/src/main/res/layout/fragment_home_mine__set_name.xml
+++ b/app/src/main/res/layout/fragment_home_mine__set_name.xml
@@ -1,5 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:clickable="true"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/color_white">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="73dp"
+        android:background="@color/color_0ba8cf">
+
+        <ImageView
+            android:id="@+id/iv_top_bar_left_back"
+            android:clickable="true"
+            android:layout_alignParentBottom="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="15dp"
+            android:src="@drawable/icon_nav_back_gray" />
+
+        <TextView
+            android:layout_marginBottom="12dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="48dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="修改昵称"
+            android:textSize="18sp"
+            android:textColor="@color/color_white" />
+
+        <ImageView
+            android:visibility="visible"
+            android:id="@+id/iv_mine_personal_setname_bind"
+            android:layout_marginBottom="2dp"
+            android:padding="15dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:clickable="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/icon_finish" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_marginTop="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="54dp">
+
+        <EditText
+            android:id="@+id/et_mine_personal_information_new_name"
+            android:textColor="@color/color_333333"
+            android:textSize="16sp"
+            android:layout_centerVertical="true"
+            android:hint="输入新昵称"
+            android:maxLength="12"
+            android:background="@null"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <View
+            android:id="@+id/view_mine_personal_information_new_name_line"
+            android:layout_marginBottom="8dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/color_f2f2f2" />
+
+        <ImageView
+            android:id="@+id/iv_mine_personal_information_new_name_clear"
+            android:visibility="gone"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="20dp"
+            android:layout_alignParentRight="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/btn_login_clear_text" />
+
+    </RelativeLayout>
+
+</LinearLayout>
+
+<!--
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_white"
@@ -66,7 +154,7 @@
                     android:background="@color/color_f2f2f2" />
             </FrameLayout>
 
-            <!--     <FrameLayout
+            &lt;!&ndash;     <FrameLayout
                      android:id="@+id/fLayout_verification_code_input_box"
                      android:layout_width="match_parent"
                      android:layout_height="48dp"
@@ -113,7 +201,7 @@
                          android:layout_height="1dp"
                          android:layout_gravity="bottom"
                          android:background="@color/color_f2f2f2" />
-                 </FrameLayout>-->
+                 </FrameLayout>&ndash;&gt;
 
 
             <TextView
@@ -125,7 +213,4 @@
                 android:id="@+id/tv_save_username" />
         </LinearLayout>
     </FrameLayout>
-
-
-
-</LinearLayout>
+</LinearLayout>-->
