--- a/app/src/main/res/layout/layout_item_loading_wonderful.xml
+++ b/app/src/main/res/layout/layout_item_loading_wonderful.xml
@@ -6,9 +6,9 @@
     android:orientation="horizontal">
 
     <!--<View-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="1dp"-->
-        <!--android:background="@color/color_e8e8e8" />-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="1dp"-->
+    <!--android:background="@color/color_e8e8e8" />-->
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -21,6 +21,7 @@
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:padding="5dp"
+            hunt:progress_point_radius="2dp"
             hunt:progress_stroke_color="@color/color_4b9fd5" />
 
         <TextView
@@ -29,7 +30,8 @@
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:text="加载中..."
+            android:text="@string/item_loading"
+            android:textColor="@color/color_888888"
             android:textSize="11sp" />
     </LinearLayout>
 
