--- a/app/src/main/res/layout/fragment_mine_long_big_image.xml
+++ b/app/src/main/res/layout/fragment_mine_long_big_image.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:background="@color/color_white"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ImageView
+        android:layout_gravity="center"
         android:id="@+id/iv_look_big_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
-    <ImageView
-        android:layout_gravity="center"
-        android:id="@+id/iv_load_small_iamge"
-        android:layout_width="100dp"
-        android:layout_height="100dp" />
 
     <ProgressBar
         android:visibility="invisible"
