--- a/app/src/main/res/layout/fragment_home_mine__set_name.xml
+++ b/app/src/main/res/layout/fragment_home_mine__set_name.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:clickable="true"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_white">
+    android:background="@color/color_white"
+    android:clickable="true"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -13,204 +13,205 @@
 
         <ImageView
             android:id="@+id/iv_top_bar_left_back"
-            android:clickable="true"
-            android:layout_alignParentBottom="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:clickable="true"
             android:padding="15dp"
             android:src="@drawable/icon_nav_back_gray" />
 
         <TextView
-            android:layout_marginBottom="12dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginLeft="48dp"
+            android:id="@+id/tv_save_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="12dp"
+            android:layout_marginLeft="48dp"
             android:text="修改昵称"
-            android:textSize="18sp"
-            android:textColor="@color/color_white" />
+            android:textColor="@color/color_white"
+            android:textSize="18sp" />
 
         <ImageView
-            android:visibility="visible"
             android:id="@+id/iv_mine_personal_setname_bind"
-            android:layout_marginBottom="2dp"
-            android:padding="15dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:clickable="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/icon_finish" />
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="2dp"
+            android:clickable="true"
+            android:padding="15dp"
+            android:src="@drawable/icon_finish"
+            android:visibility="visible" />
     </RelativeLayout>
 
     <RelativeLayout
-        android:layout_marginTop="8dp"
         android:layout_width="match_parent"
-        android:layout_height="54dp">
+        android:layout_height="54dp"
+        android:layout_marginTop="8dp">
 
         <EditText
             android:id="@+id/et_mine_personal_information_new_name"
-            android:textColor="@color/color_333333"
-            android:textSize="16sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@null"
             android:hint="输入新昵称"
             android:maxLength="12"
-            android:background="@null"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:textColor="@color/color_333333"
+            android:textSize="16sp" />
 
         <View
             android:id="@+id/view_mine_personal_information_new_name_line"
-            android:layout_marginBottom="8dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
             android:layout_width="match_parent"
             android:layout_height="1dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:background="@color/color_f2f2f2" />
 
         <ImageView
             android:id="@+id/iv_mine_personal_information_new_name_clear"
-            android:visibility="gone"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="20dp"
-            android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/btn_login_clear_text" />
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="20dp"
+            android:src="@drawable/btn_login_clear_text"
+            android:visibility="gone" />
 
     </RelativeLayout>
 
 </LinearLayout>
 
-<!--
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/color_white"
-    android:clickable="true"
-    android:orientation="vertical">
-
-    <include
-        android:id="@+id/rLayout_login_top"
-        layout="@layout/layout_top_bar_item"
+    <!--
+    <?xml version="1.0" encoding="utf-8"?>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginTop="60dp" />
+        android:layout_height="match_parent"
+        android:background="@color/color_white"
+        android:clickable="true"
+        android:orientation="vertical">
 
-    <FrameLayout
-        android:id="@+id/fLayout_forget_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:id="@+id/lLayout_register_input"
+        <include
+            android:id="@+id/rLayout_login_top"
+            layout="@layout/layout_top_bar_item"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="44dp"
-            android:animateLayoutChanges="true"
-            android:orientation="vertical">
+            android:layout_height="48dp"
+            android:layout_marginTop="60dp" />
 
-            <FrameLayout
-                android:id="@+id/fLayout_account_input_box"
+        <FrameLayout
+            android:id="@+id/fLayout_forget_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:id="@+id/lLayout_register_input"
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:layout_marginTop="30dp">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="44dp"
+                android:animateLayoutChanges="true"
+                android:orientation="vertical">
 
-
-                <EditText
-                    android:id="@+id/et_input_username"
+                <FrameLayout
+                    android:id="@+id/fLayout_account_input_box"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginTop="5dp"
-                    android:background="@null"
-                    android:focusable="true"
-                    android:focusableInTouchMode="true"
-                    android:gravity="center"
-                    android:hint="请输入新昵称"
-                    android:maxLength="60"
-                    android:textColor="@color/color_666666"
-                    android:textColorHint="@color/color_cecece"
-                    android:textCursorDrawable="@drawable/bg_common_cursor"
-                    android:textSize="15sp" />
-
-                <ImageView
-                    android:id="@+id/iv_forget_clear_username"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="end"
-                    android:src="@drawable/btn_login_clear_text"
-                    android:visibility="gone" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_gravity="bottom"
-                    android:background="@color/color_f2f2f2" />
-            </FrameLayout>
-
-            &lt;!&ndash;     <FrameLayout
-                     android:id="@+id/fLayout_verification_code_input_box"
-                     android:layout_width="match_parent"
-                     android:layout_height="48dp"
-                     android:layout_marginTop="30dp"
-                     android:visibility="gone">
+                    android:layout_height="48dp"
+                    android:layout_marginTop="30dp">
 
 
-                     <EditText
-                         android:id="@+id/et_verification_input"
+                    <EditText
+                        android:id="@+id/et_input_username"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@null"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
+                        android:gravity="center"
+                        android:hint="请输入新昵称"
+                        android:maxLength="60"
+                        android:textColor="@color/color_666666"
+                        android:textColorHint="@color/color_cecece"
+                        android:textCursorDrawable="@drawable/bg_common_cursor"
+                        android:textSize="15sp" />
+
+                    <ImageView
+                        android:id="@+id/iv_forget_clear_username"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="end"
+                        android:src="@drawable/btn_login_clear_text"
+                        android:visibility="gone" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_gravity="bottom"
+                        android:background="@color/color_f2f2f2" />
+                </FrameLayout>
+
+                &lt;!&ndash;     <FrameLayout
+                         android:id="@+id/fLayout_verification_code_input_box"
                          android:layout_width="match_parent"
-                         android:layout_height="match_parent"
-                         android:layout_gravity="center"
-                         android:layout_marginBottom="5dp"
-                         android:layout_marginTop="5dp"
-                         android:background="@null"
-                         android:focusable="true"
-                         android:focusableInTouchMode="true"
-                         android:gravity="center"
-                         android:hint="@string/item_input_phone_num"
-                         android:inputType="numberDecimal"
-                         android:maxLength="6"
-                         android:paddingLeft="40dp"
-                         android:paddingRight="40dp"
-                         android:textColor="@color/color_666666"
-                         android:textColorHint="@color/color_cecece"
-                         android:textCursorDrawable="@drawable/bg_common_cursor"
-                         android:textSize="15sp" />
+                         android:layout_height="48dp"
+                         android:layout_marginTop="30dp"
+                         android:visibility="gone">
 
 
-                     <TextView
-                         android:id="@+id/tv_meter_get_code"
-                         android:layout_width="wrap_content"
-                         android:layout_height="match_parent"
-                         android:layout_gravity="end"
-                         android:enabled="false"
-                         android:gravity="center"
-                         android:paddingLeft="10dp"
-                         android:paddingRight="10dp"
-                         android:textColor="@color/common_btn_color_state" />
+                         <EditText
+                             android:id="@+id/et_verification_input"
+                             android:layout_width="match_parent"
+                             android:layout_height="match_parent"
+                             android:layout_gravity="center"
+                             android:layout_marginBottom="5dp"
+                             android:layout_marginTop="5dp"
+                             android:background="@null"
+                             android:focusable="true"
+                             android:focusableInTouchMode="true"
+                             android:gravity="center"
+                             android:hint="@string/item_input_phone_num"
+                             android:inputType="numberDecimal"
+                             android:maxLength="6"
+                             android:paddingLeft="40dp"
+                             android:paddingRight="40dp"
+                             android:textColor="@color/color_666666"
+                             android:textColorHint="@color/color_cecece"
+                             android:textCursorDrawable="@drawable/bg_common_cursor"
+                             android:textSize="15sp" />
 
 
-                     <View
-                         android:layout_width="match_parent"
-                         android:layout_height="1dp"
-                         android:layout_gravity="bottom"
-                         android:background="@color/color_f2f2f2" />
-                 </FrameLayout>&ndash;&gt;
+                         <TextView
+                             android:id="@+id/tv_meter_get_code"
+                             android:layout_width="wrap_content"
+                             android:layout_height="match_parent"
+                             android:layout_gravity="end"
+                             android:enabled="false"
+                             android:gravity="center"
+                             android:paddingLeft="10dp"
+                             android:paddingRight="10dp"
+                             android:textColor="@color/common_btn_color_state" />
 
 
-            <TextView
-                android:enabled="true"
-                style="@style/login_model_commit_style"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="37dp"
-                android:text="保存"
-                android:id="@+id/tv_save_username" />
-        </LinearLayout>
-    </FrameLayout>
-</LinearLayout>-->
+                         <View
+                             android:layout_width="match_parent"
+                             android:layout_height="1dp"
+                             android:layout_gravity="bottom"
+                             android:background="@color/color_f2f2f2" />
+                     </FrameLayout>&ndash;&gt;
+
+
+                <TextView
+                    android:enabled="true"
+                    style="@style/login_model_commit_style"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="37dp"
+                    android:text="保存"
+                    android:id="@+id/tv_save_username" />
+            </LinearLayout>
+        </FrameLayout>
+    </LinearLayout>-->
