--- a/app/src/main/res/layout/fragment_mine_relativeandfriend_share_devices.xml
+++ b/app/src/main/res/layout/fragment_mine_relativeandfriend_share_devices.xml
@@ -65,171 +65,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <RelativeLayout
-        android:id="@+id/rl_share_smartcamera"
+    <android.support.v7.widget.RecyclerView
         android:layout_marginLeft="15dp"
+        android:id="@+id/rcy_share_device_list"
         android:layout_width="match_parent"
-        android:layout_height="67dp">
-
-        <ImageView
-            android:layout_centerVertical="true"
-            android:id="@+id/iv_smartcamera"
-            android:src="@drawable/icon_home_camera_online"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <RelativeLayout
-            android:gravity="center_vertical"
-            android:layout_toRightOf="@id/iv_smartcamera"
-            android:paddingLeft="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="67dp"
-            >
-            <TextView
-                android:id="@+id/tv_smartcamera"
-                android:textSize="16sp"
-                android:textColor="@color/color_333333"
-                android:text="智能摄像头"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:paddingTop="8dp"
-                android:layout_below="@id/tv_smartcamera"
-                android:textSize="12sp"
-                android:textColor="@color/color_8c8c8c"
-                android:text="3/5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </RelativeLayout>
-        <View
-            android:layout_marginLeft="48dp"
-            android:layout_alignParentBottom="true"
-            android:background="@color/color_f2f2f2"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"/>
-
-        <ImageView
-            android:id="@+id/iv_share_smartcamera"
-            android:layout_marginRight="15dp"
-            android:gravity="center"
-            android:src="@drawable/icon_selected"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_marginLeft="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="67dp">
-
-        <ImageView
-            android:layout_centerVertical="true"
-            android:id="@+id/iv_smartbell"
-            android:src="@drawable/icon_home_doorbell_online"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <RelativeLayout
-            android:gravity="center_vertical"
-            android:layout_toRightOf="@id/iv_smartbell"
-            android:paddingLeft="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="67dp"
-            >
-            <TextView
-                android:id="@+id/tv_smartbell"
-                android:textSize="16sp"
-                android:textColor="@color/color_333333"
-                android:text="智能门铃"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:paddingTop="8dp"
-                android:layout_below="@id/tv_smartbell"
-                android:textSize="12sp"
-                android:textColor="@color/color_8c8c8c"
-                android:text="3/5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </RelativeLayout>
-        <View
-            android:layout_marginLeft="48dp"
-            android:layout_alignParentBottom="true"
-            android:background="@color/color_f2f2f2"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"/>
-
-        <ImageView
-            android:id="@+id/iv_share_smartbell"
-            android:layout_marginRight="15dp"
-            android:gravity="center"
-            android:src="@drawable/icon_not_selected"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    </RelativeLayout>
-
-
-    <RelativeLayout
-        android:layout_marginLeft="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="67dp">
-
-        <ImageView
-            android:layout_centerVertical="true"
-            android:id="@+id/iv_smartcloud"
-            android:src="@drawable/icon_home_album_online"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <RelativeLayout
-            android:gravity="center_vertical"
-            android:layout_toRightOf="@id/iv_smartcloud"
-            android:paddingLeft="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="67dp"
-            >
-            <TextView
-                android:id="@+id/tv_smartcloud"
-                android:textSize="16sp"
-                android:textColor="@color/color_333333"
-                android:text="云相框"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:paddingTop="8dp"
-                android:layout_below="@id/tv_smartcloud"
-                android:textSize="12sp"
-                android:textColor="@color/color_8c8c8c"
-                android:text="5/5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </RelativeLayout>
-        <View
-            android:layout_marginLeft="48dp"
-            android:layout_alignParentBottom="true"
-            android:background="@color/color_f2f2f2"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"/>
-
-        <ImageView
-            android:id="@+id/iv_share_smartcloud"
-            android:layout_marginRight="15dp"
-            android:gravity="center"
-            android:src="@drawable/icon_not_selected"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    </RelativeLayout>
+        android:layout_height="wrap_content">
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
