--- a/app/src/main/res/layout/fragment_cloud_live_setting.xml
+++ b/app/src/main/res/layout/fragment_cloud_live_setting.xml
@@ -67,6 +67,7 @@
 
 
             <TextView
+                android:id="@+id/tv_door_bell"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
