--- a/app/src/main/res/layout/fragment_cloud_voice_talk_dialog.xml
+++ b/app/src/main/res/layout/fragment_cloud_voice_talk_dialog.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:background="@color/color_white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <RelativeLayout
         android:background="@color/color_white"
-        android:layout_marginLeft="15dp"
         android:layout_width="match_parent"
         android:layout_height="46dp">
 
         <ImageView
+            android:layout_marginLeft="15dp"
             android:id="@+id/iv_cancle"
             android:layout_centerVertical="true"
             android:src="@drawable/login_btn_close"
@@ -47,6 +48,7 @@
             android:layout_height="wrap_content" />
 
         <com.cylan.jiafeigou.widget.CloudLiveVoiceTalkView
+            android:id="@+id/voidTalkView_left"
             android:layout_marginRight="24dp"
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@id/iv_voice_delete"
@@ -55,6 +57,7 @@
             />
 
         <com.cylan.jiafeigou.widget.CloudLiveVoiceTalkView
+            android:id="@+id/voidTalkView_right"
             android:layout_marginLeft="24dp"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@id/iv_voice_delete"
