--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -130,5 +130,10 @@
         <attr name="ls_inner_color" format="reference|color" />
         <attr name="ls_outer_color" format="reference|color" />
     </declare-styleable>
+    <declare-styleable name="guide_indicator_style">
+        <attr name="g_normal_color" format="reference|color" />
+        <attr name="g_focused_color" format="reference|color" />
+        <attr name="g_circle_radius" format="reference|dimension" />
+    </declare-styleable>
 
 </resources>
