--- a/app/src/main/res/layout/layout_bell_call_list_item.xml
+++ b/app/src/main/res/layout/layout_bell_call_list_item.xml
@@ -65,7 +65,8 @@
         android:id="@+id/imgv_bell_call_item_cover"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/card_view_alpha_cover">
+        android:background="@drawable/card_view_alpha_cover"
+        android:visibility="gone">
 
         <ImageView
             android:layout_width="wrap_content"
