--- a/app/src/main/res/layout/fragment_cloud_voice_talk_dialog.xml
+++ b/app/src/main/res/layout/fragment_cloud_voice_talk_dialog.xml
@@ -19,6 +19,7 @@
             android:layout_height="wrap_content" />
 
         <TextView
+            android:id="@+id/tv_show_mesg"
             android:layout_centerInParent="true"
             android:textSize="15sp"
             android:textColor="#f26b6b"
@@ -43,7 +44,7 @@
         <ImageView
             android:id="@+id/iv_voice_delete"
             android:layout_centerInParent="true"
-            android:src="@drawable/icon_delete"
+            android:src="@drawable/icon_restart_recorder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
