--- a/app/src/main/res/layout/fragment_cloud_live_videochat.xml
+++ b/app/src/main/res/layout/fragment_cloud_live_videochat.xml
@@ -10,10 +10,11 @@
         android:layout_height="match_parent" />
 
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <TextView
+            android:id="@+id/tv_video_time"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:textColor="@color/color_white"
@@ -21,6 +22,25 @@
             android:text="02:22"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_centerInParent="true"
+                android:id="@+id/tv_connet_text"
+                android:textColor="@color/color_white"
+                android:textSize="18sp"
+                android:text="连接中"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_toEndOf="@id/tv_connet_text"
+                android:layout_centerVertical="true"
+                android:id="@+id/tv_loading"
+                android:textColor="@color/color_white"
+                android:textSize="18sp"
+                android:text="..."
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
         <ImageView
             android:layout_centerHorizontal="true"
@@ -31,6 +51,7 @@
             android:layout_height="wrap_content" />
 
         <LinearLayout
+            android:id="@+id/ll_myself_video"
             android:orientation="vertical"
             android:background="@color/color_white"
             android:layout_marginBottom="6dp"
