修改登陆 'pre-登陆页面'

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -87,6 +87,8 @@
     <color name="color_41B56A">#41B56A</color>
     <color name="color_F43531">#F43531</color>
     <color name="color_3341B56A">#3341B56A</color>
+    <color name="color_5e97df">#5e97df</color>
+    <color name="color_84bcfb">#84bcfb</color>
 
 
     <color name="background_tab_pressed">#6633B5E5</color>
