--- a/app/src/main/res/layout/fragment_welcome_guide_view.xml
+++ b/app/src/main/res/layout/fragment_welcome_guide_view.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
-    android:background="@android:color/white"
+    android:background="@drawable/bg_welcome_guide"
     android:clickable="true">
 
     <com.cylan.jiafeigou.widget.GreatDragView
@@ -12,58 +12,137 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="3dp"
-            android:layout_marginTop="-2dp"
-            android:padding="2dp"
-            card:cardElevation="10dp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:antialias="true"
-                android:src="@drawable/icon_delete" />
-        </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="5dp"
-            android:layout_marginTop="-4dp"
-            android:padding="2dp"
+            android:layout_marginTop="-8dp"
             card:cardElevation="10dp">
 
-            <ImageView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:antialias="true"
-                android:src="@drawable/icon_delete" />
+                android:orientation="vertical"
+                android:paddingEnd="13dp"
+                android:paddingStart="13dp"
+                android:paddingTop="37dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/pic_welcome_page_3" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="30dp"
+                    android:text="全景摄像机即将推出"
+                    android:textColor="@color/color_5e97df"
+                    android:textSize="17sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="40dp"
+                    android:layout_marginTop="3dp"
+                    android:text="结合VR产品，前所未有的视觉体验"
+                    android:textColor="@color/color_84bcfb"
+                    android:textSize="14sp" />
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_marginStart="3dp"
+            android:layout_marginTop="-5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            card:cardElevation="10dp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingEnd="13dp"
+                android:paddingStart="13dp"
+                android:paddingTop="37dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/pic_welcome_page_2" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="30dp"
+                    android:text="记录生活的每日精彩"
+                    android:textColor="@color/color_5e97df"
+                    android:textSize="17sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="40dp"
+                    android:layout_marginTop="3dp"
+                    android:text="新增每日精彩，制作生活微视频"
+                    android:textColor="@color/color_84bcfb"
+                    android:textSize="14sp" />
+            </LinearLayout>
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:padding="2dp"
             card:cardElevation="10dp">
 
-            <ImageView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:antialias="true"
-                android:src="@drawable/icon_delete" />
+                android:orientation="vertical"
+                android:paddingEnd="13dp"
+                android:paddingStart="13dp"
+                android:paddingTop="37dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/pic_welcome_page_1" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="30dp"
+                    android:text="全新设计"
+                    android:textColor="@color/color_5e97df"
+                    android:textSize="17sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="40dp"
+                    android:layout_marginTop="3dp"
+                    android:text="更简洁的设计，更好的体验"
+                    android:textColor="@color/color_84bcfb"
+                    android:textSize="14sp" />
+            </LinearLayout>
         </android.support.v7.widget.CardView>
     </com.cylan.jiafeigou.widget.GreatDragView>
 
-    <com.cylan.jiafeigou.widget.GuideIndicatorLayout
-        android:background="#eee000"
-        android:id="@+id/v_guide_indicator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center_horizontal"
-        android:layout_marginBottom="50dp" />
+    <!--<com.cylan.jiafeigou.widget.GuideIndicatorLayout-->
+    <!--android:background="#eee000"-->
+    <!--android:id="@+id/v_guide_indicator"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_gravity="bottom|center_horizontal"-->
+    <!--android:layout_marginBottom="50dp" />-->
 </FrameLayout>
