新进程下载更新文件，与主进程通信完成

--- a/app/src/main/res/layout/fragment_splash_before_login.xml
+++ b/app/src/main/res/layout/fragment_splash_before_login.xml
@@ -56,9 +56,8 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="24dp"
         android:clickable="true"
+        android:padding="24dp"
         android:text="随便看看"
         android:textColor="@color/color_7c7c7c"
         android:textSize="13sp" />
