--- a/app/src/main/res/layout/layout_bell_pre_live_hot_seat.xml
+++ b/app/src/main/res/layout/layout_bell_pre_live_hot_seat.xml
@@ -8,7 +8,7 @@
 
 
     <com.cylan.jiafeigou.widget.bell.LLView
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_gravity="center_vertical"
         hunt:ll_big_inner_color="@color/color_FF1744"
@@ -20,7 +20,7 @@
         hunt:ll_small_radius="3dp" />
 
     <com.cylan.jiafeigou.widget.bell.LLView
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_gravity="center_vertical|end"
         hunt:ll_big_inner_color="@color/color_41B56A"
