--- a/app/src/main/res/layout/fragment_home_mine.xml
+++ b/app/src/main/res/layout/fragment_home_mine.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:hunt="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_white">
@@ -51,33 +52,23 @@
                 android:layout_marginTop="13dp"
                 android:text="用户昵称"
                 android:textColor="@color/color_white"
-                android:textSize="19sp" />
+                android:textSize="19sp"
+                tools:ignore="HardcodedText" />
         </LinearLayout>
 
-        <FrameLayout
-            android:clickable="true"
-            android:id="@+id/rLayout_msg_box"
+
+        <com.cylan.jiafeigou.widget.MsgBoxView
+            android:id="@+id/tv_home_mine_msg_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="top|end"
-            android:layout_marginTop="30dp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/icon_mine_message" />
-
-            <com.cylan.jiafeigou.widget.MsgTextView
-                android:id="@+id/tv_home_mine_msg_count"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_gravity="top|end"
-                android:padding="10dp"
-                android:text="9"
-                android:textColor="@color/color_white"
-                android:textSize="9sp" />
-        </FrameLayout>
-
+            android:layout_gravity="end|top"
+            android:layout_marginEnd="13dp"
+            android:layout_marginTop="17dp"
+            android:padding="5dp"
+            android:src="@drawable/icon_mine_message"
+            hunt:mb_circleColor="@color/color_red_dot_f43531"
+            hunt:mb_textColor="@color/color_white"
+            hunt:mb_textSize="10sp" />
 
     </FrameLayout>
 
@@ -92,10 +83,10 @@
             android:id="@+id/home_mine_item_friend"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:clickable="true"
             hunt:leftDrawable="@drawable/icon_mine_friend"
             hunt:rightDrawable="@drawable/list_icon_next"
             hunt:text="亲朋好友"
-            android:clickable="true"
             hunt:textColor="@color/color_333333"
             hunt:textSize="16sp" />
 
