--- a/app/src/main/res/layout/layout_bell_call_list_item.xml
+++ b/app/src/main/res/layout/layout_bell_call_list_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:hunt="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cv_bell_call_item"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -45,7 +46,15 @@
             android:layout_height="80dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="17dp"
-            android:src="@drawable/icon_home_doorbell_online" />
+            android:src="@drawable/icon_home_doorbell_online"
+            hunt:t_border_color="@color/color_white"
+            hunt:t_border_width="1dp"
+            hunt:t_enable_border="true"
+            hunt:t_ignore="true"
+            hunt:t_point_color="@color/color_red_dot_f43531"
+            hunt:t_radius="4dp"
+            hunt:t_round_image="true"
+            hunt:t_show_point="true" />
 
 
         <TextView
