本地数据库缓存消息的清空

--- a/app/src/main/res/layout/activity_cloud_live.xml
+++ b/app/src/main/res/layout/activity_cloud_live.xml
@@ -43,7 +43,7 @@
         android:layout_below="@id/rLayout_cloud_live_top_bar"
         android:id="@+id/rcy_cloud_mesg_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="fill_parent">
     </android.support.v7.widget.RecyclerView>
 
     <RelativeLayout
