--- a/app/src/main/res/layout/fragment_cloud_live_setting.xml
+++ b/app/src/main/res/layout/fragment_cloud_live_setting.xml
@@ -111,5 +111,12 @@
                 android:textColor="@color/color_FF3D32"
                 android:textSize="16sp" />
         </LinearLayout>
+
+        <ProgressBar
+            android:visibility="invisible"
+            android:id="@+id/progress_clear_record"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </FrameLayout>
 </LinearLayout>
