关联门铃列表

--- a/app/src/main/res/layout/fragment_cloud_live_videochat.xml
+++ b/app/src/main/res/layout/fragment_cloud_live_videochat.xml
@@ -13,11 +13,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
+        <Chronometer
+            android:visibility="invisible"
             android:id="@+id/tv_video_time"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:textColor="@color/color_white"
+            android:format="%s"
             android:textSize="18sp"
             android:text="02:22"
             android:layout_width="wrap_content"
@@ -43,6 +45,7 @@
                 android:layout_height="wrap_content" />
 
         <ImageView
+            android:id="@+id/iv_hang_up"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="26dp"
             android:layout_alignParentBottom="true"
