--- a/app/src/main/res/layout/fragment_cloud_correlation_door_bell.xml
+++ b/app/src/main/res/layout/fragment_cloud_correlation_door_bell.xml
@@ -28,34 +28,58 @@
         </FrameLayout>
     </LinearLayout>
 
-    <TextView
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="19dp"
-        android:text="已关联"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <android.support.v7.widget.RecyclerView
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="15dp"
-        android:id="@+id/rcy_has_correlation"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    </android.support.v7.widget.RecyclerView>
 
-    <TextView
-        android:layout_marginTop="19dp"
-        android:layout_marginLeft="15dp"
-        android:text="未关联"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <LinearLayout
+            android:id="@+id/ll_list_container"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="15dp"
-        android:id="@+id/rcy_uncorrelation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </android.support.v7.widget.RecyclerView>
+            <TextView
+                android:id="@+id/tv_relative_door_bell"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="19dp"
+                android:text="已关联"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <android.support.v7.widget.RecyclerView
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="15dp"
+                android:id="@+id/rcy_has_correlation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            </android.support.v7.widget.RecyclerView>
+
+            <TextView
+                android:id="@+id/tv_unrelative_door_bell"
+                android:layout_marginTop="19dp"
+                android:layout_marginLeft="15dp"
+                android:text="未关联"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <android.support.v7.widget.RecyclerView
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="15dp"
+                android:id="@+id/rcy_uncorrelation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            </android.support.v7.widget.RecyclerView>
+        </LinearLayout>
+
+        <TextView
+            android:visibility="invisible"
+            android:id="@+id/tv_no_device"
+            android:layout_gravity="center"
+            android:textSize="20sp"
+            android:text="暂无设备"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </FrameLayout>
 
 </LinearLayout>
