设备名称回显

--- a/app/src/main/res/layout/activity_cloud_live_mesg_voice_item.xml
+++ b/app/src/main/res/layout/activity_cloud_live_mesg_voice_item.xml
@@ -34,6 +34,7 @@
             android:layout_height="38dp">
 
             <TextView
+                android:textColor="@color/color_white"
                 android:id="@+id/tv_voice_length"
                 android:layout_marginLeft="15dp"
                 android:layout_gravity="center_vertical"
