--- a/app/src/main/res/layout/activity_cloud_live_mesg_video_talk_item.xml
+++ b/app/src/main/res/layout/activity_cloud_live_mesg_video_talk_item.xml
@@ -41,6 +41,7 @@
                 android:layout_height="wrap_content" />
 
             <TextView
+                android:textColor="@color/color_white"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="20dp"
                 android:id="@+id/tv_voideo_talk_length"
