--- a/app/src/main/res/layout/fragment_cloud_correlation_door_bell.xml
+++ b/app/src/main/res/layout/fragment_cloud_correlation_door_bell.xml
@@ -80,6 +80,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
+        <ProgressBar
+            android:layout_gravity="center"
+            android:visibility="invisible"
+            android:id="@+id/progress_show"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </FrameLayout>
 
 </LinearLayout>
