--- a/app/src/main/res/layout/fragment_msglive_message.xml
+++ b/app/src/main/res/layout/fragment_msglive_message.xml
@@ -129,6 +129,7 @@
             <!-- 开关的切换 -->
             <com.kyleduo.switchbutton.SwitchButton
                 android:layout_marginRight="26dp"
+                style="@style/SwitchButtonStyleMD"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:id="@+id/btn_switch"
