我的亲友从SDK获取数据修改

--- a/app/src/main/res/layout/fragment_home_mine_relativesandfriends.xml
+++ b/app/src/main/res/layout/fragment_home_mine_relativesandfriends.xml
@@ -54,6 +54,7 @@
             android:layout_height="wrap_content">
             <!--添加请求-->
             <TextView
+                android:id="@+id/tv_add_request_title"
                 android:layout_marginTop="19dp"
                 android:layout_marginLeft="15dp"
                 android:textColor="@color/color_4b9fd5"
@@ -70,6 +71,7 @@
 
             <!--亲友列表-->
             <TextView
+                android:id="@+id/tv_friend_list_title"
                 android:layout_marginTop="19dp"
                 android:layout_marginLeft="15dp"
                 android:textColor="@color/color_4b9fd5"
@@ -80,6 +82,7 @@
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerview_relativesandfriends_list"
+                android:scrollbars="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
             </android.support.v7.widget.RecyclerView>
