--- a/app/src/main/res/layout/fragment_mine_relativesandfriends_request_add_items.xml
+++ b/app/src/main/res/layout/fragment_mine_relativesandfriends_request_add_items.xml
@@ -43,6 +43,7 @@
                     android:textColor="@color/color_8c8c8c"
                     android:text="我是小姨"
                     android:singleLine="true"
+                    android:ellipsize="end"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </RelativeLayout>
