--- a/app/src/main/res/layout/layout_toaster_normal.xml
+++ b/app/src/main/res/layout/layout_toaster_normal.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/notify"
+    android:id="@+id/tv_toaster_normal"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/toaster_bg"
