--- a/app/src/main/res/layout/fragment_mine_device_share_manager.xml
+++ b/app/src/main/res/layout/fragment_mine_device_share_manager.xml
@@ -32,21 +32,80 @@
 
     </RelativeLayout>
 
-    <TextView
-        android:layout_marginTop="19dp"
-        android:layout_marginLeft="15dp"
-        android:text="已分享亲友"
-        android:textSize="13sp"
-        android:textColor="@color/color_4b9fd5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <android.support.v7.widget.RecyclerView
-        android:layout_marginTop="8dp"
-        android:id="@+id/recycler_had_share_relatives_and_friend"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:layout_height="0dp">
-    </android.support.v7.widget.RecyclerView>
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tv_has_share_title"
+                android:layout_marginTop="19dp"
+                android:layout_marginLeft="15dp"
+                android:text="已分享亲友"
+                android:textSize="13sp"
+                android:textColor="@color/color_4b9fd5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <android.support.v7.widget.RecyclerView
+                android:layout_marginTop="8dp"
+                android:id="@+id/recycler_had_share_relatives_and_friend"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_height="0dp">
+            </android.support.v7.widget.RecyclerView>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_no_share_friend"
+            android:visibility="invisible"
+            android:layout_marginTop="120dp"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:src="@drawable/icon_no_share"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_marginTop="16dp"
+                android:textColor="#aaaaaa"
+                android:textSize="15sp"
+                android:text="暂无分享"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <RelativeLayout
+            android:visibility="invisible"
+            android:id="@+id/rl_cancle_share_progress"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ProgressBar
+                android:layout_centerHorizontal="true"
+                android:id="@+id/progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:text="取消分享中..."
+                android:layout_below="@id/progress_bar"
+                android:textColor="@color/color_black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </RelativeLayout>
+
+    </FrameLayout>
 
 </LinearLayout>
