--- a/app/src/main/res/layout/fragment_mine_relativeandfriend_add_from_contact.xml
+++ b/app/src/main/res/layout/fragment_mine_relativeandfriend_add_from_contact.xml
@@ -35,10 +35,39 @@
 
     </RelativeLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rcy_contact_list"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    </android.support.v7.widget.RecyclerView>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rcy_contact_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </android.support.v7.widget.RecyclerView>
+
+        <LinearLayout
+            android:id="@+id/ll_no_contact"
+            android:visibility="invisible"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="120dp"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:src="@drawable/icon_no_friends"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_marginTop="16dp"
+                android:text="暂无联系人"
+                android:textColor="#aaaaaa"
+                android:textSize="15sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+    </FrameLayout>
 
 </LinearLayout>
